correct a style problem on mobile device

--- a/web-front/src/components/courses.css
+++ b/web-front/src/components/courses.css
@@ -100,6 +100,13 @@
 }
 
 @media screen and (max-width:600px) {
+  .courses-section {
+    width: 100%;
+    margin-left: 0%;
+    padding-top: 180px;
+    margin-top: -160px;
+  }
+
   .courses-container {
     width: 90%;
     margin-left: 5%;
