--- a/web-front/src/components/experience.css
+++ b/web-front/src/components/experience.css
@@ -90,6 +90,13 @@
 }
 
 @media screen and (max-width:600px) {
+  .experiences-section {
+    width: 100%;
+    margin-left: 0%;
+    padding-top: 180px;
+    margin-top: -160px;
+  }
+
   .experiences-container {
     width: 90%;
     margin-left: 5%;
